--- a/traveltreasure/public/index.html
+++ b/traveltreasure/public/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://res.cloudinary.com/dsysrrxod/image/upload/v1719134193/FavIcon_rpdj4z.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      type="image/png"
+      href="https://res.cloudinary.com/dsysrrxod/image/upload/v1719134193/FavIcon_rpdj4z.png"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
